--- a/SXJZcnSample.tex
+++ b/SXJZcnSample.tex
@@ -15,7 +15,6 @@
 \newcommand{\pubmonth}{7} % 出版月份
 \setcounter{page}{583} % 起始页码
 \newcommand{\receivedate}{2015-08-25} % 论文收到日期
-\newcommand{\revisedate}{2015-12-23} % 论文修改日期
 \newcommand{\doino}{10.11845/sxjz.2015156b} % doi号
 \newcommand{\paperid}{1000-0917(2017)04-0583-07} % 文章编号
 \newcommand{\documentcode}{A} % 文献标识码
@@ -27,7 +26,6 @@
 \newcommand{\cntitle}{内交换子群满足某些条件的亚循环$p$群} % 题目
 \newcommand{\cnauthor}{王丽芳} % 作者
 \newcommand{\cninstitution}{山西师范大学数学与计算机科学学院, 临汾, 山西, 041004} % 研究机构
-\newcommand{\cninstitutionadjpos}{3.2cm} % 调节研究机构显示的位置,  前面加入\hspce{\cninstitutionadjpos}, 默认为0cm
 \newcommand{\cnabstract}{本文决定了非正规内交换子群均同阶的亚循环$2$群以及非正规内交换子群的正规闭包是极大子群的亚循环$p$群.  从而解决了Berkovich提出的两个问题.} % 摘要
 \newcommand{\cnkeywords}{亚循环$p$群; 内交换子群; 非正规子群的正规闭包} % 关键词
 \newcommand{\MR}{20D15} % MR(2010)主题分类
@@ -40,7 +38,6 @@
 \newcommand{\entitle}{Finite Metacyclic ${\bm p}$-groups All of Whose Minimal Non-abelian Subgroups Satisfy Some Properties} % Title
 \newcommand{\enauthor}{WANG Lifang} % Author
 \newcommand{\eninstitution}{School of Mathematics and Computer Science, Shanxi Normal University, Linfen, Shanxi, 041004, P. R. China} % Institution
-\newcommand{\eninstitutionadjpos}{0.7cm} % used for adding \hspce{\eninstitutionadjpos} before \eninstitutionto adajust the position, default is 0cm
 \newcommand{\enabstract}{We classify finite metacyclic $p$-groups all of whose minimal non-abelian subgroups have the same order, and finite metacyclic $p$-groups all of whose normal closures of non-normal minimal non-abelian subgroups are maximal. This solves two problems proposed by Berkovich.} % Abstract
 \newcommand{\enkeywords}{metacyclic $p$-group; minimal non-abelian subgroup; normal closure of a non-normal subgroup} % Keywords
 
@@ -48,13 +45,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%
-\EditorNote{收稿日期: \,\receivedate. \ 修改稿收到日期: \,\revisedate.}  % 首页脚注: 论文收稿修改以及接收时间
+\EditorNote{收稿日期: \,\receivedate.}  % 首页脚注: 论文收稿时间
 \EditorNote{基金项目: \fundinfo} % 首页脚注: 基金项目, 若无可注释
 \EditorNote{E-mail:~\authorinfo} % 首页脚注: 作者邮箱
 \BeginTitle % 首页页眉
 \CTitle{\cntitle}  % 题目
 \CAuthor{\cnauthor} % 作者
-\CInstitution{\cninstitution}{\cninstitutionadjpos} % 机构, 第二个参数用于调整位置
+\CInstitution{\cninstitution} % 机构
 \CAbstract{\cnabstract} % 摘要
 \CKeywords{\cnkeywords} % 关键词
 \CMRCLClass{\MR}{\CL} % MR(2010) 主题分类、中图分类号、文献标志码、文章编号
@@ -513,7 +510,7 @@ nur kommutative Gruppen geh\"{o}ren, {\it Comment. Math. Helv.}, 1947, 20:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \ETitle{\entitle} %
 \EAuthor{\enauthor} %
-\EInstitution{\eninstitution}{\eninstitutionadjpos} %
+\EInstitution{\eninstitution} %
 \EAbstract{\enabstract} %
 \EKeywords{\enkeywords} %
 
